samples/_failures_safe/1761500992_6d50a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee6926af.c: In function ‘main’:
./samples/SAFE/__tmp_ee6926af.c:143:27: error: expected ‘)’ at end of input
  143 |     addEdge(graph, 1, 3, 5
      |            ~              ^
      |                           )
./samples/SAFE/__tmp_ee6926af.c:143:5: error: expected declaration or statement at end of input
  143 |     addEdge(graph, 1, 3, 5
      |     ^~~~~~~
